feat: implement standardized test mode across rider, driver and admin apps

--- a/Admin/src/app/login/login.page.html
+++ b/Admin/src/app/login/login.page.html
@@ -20,18 +20,11 @@
       <ion-item>
         <ion-button class="country-code-btn" fill="clear" (click)="openCountrySearchModal()">
           <ion-icon name="globe-outline"></ion-icon>
-          {{  defaultCountryCode ||CountryCode }}
+          {{ defaultCountryCode ||CountryCode }}
         </ion-button>
         <div id="sign-in-button"></div>
-        <ion-input
-          formControlName="phone"
-          placeholder="Mobile Number"
-          type="tel"
-          clearInput
-          [attr.maxlength]="maxPhoneLength"
-          (ionFocus)="Show()"
-          (ionBlur)="Hide()"
-          class="phone-input">
+        <ion-input formControlName="phone" placeholder="Mobile Number" type="tel" clearInput
+          [attr.maxlength]="maxPhoneLength" (ionFocus)="Show()" (ionBlur)="Hide()" class="phone-input">
         </ion-input>
       </ion-item>
       <ion-text class="error" *ngIf="!form.get('phone').valid && form.get('phone').touched">
@@ -42,9 +35,7 @@
           Please enter a valid Mobile Number
         </p>
       </ion-text>
-      <ion-button expand="block" type="submit" 
-        [disabled]="!form.valid || !CountryCode" 
-        (click)="signIn()"
+      <ion-button expand="block" type="submit" [disabled]="!form.valid || !CountryCode" (click)="signIn()"
         class="submit-button">
         <span *ngIf="!approve2">
           <ion-icon name="log-in-outline"></ion-icon>
@@ -57,10 +48,8 @@
         <span>OR</span>
       </div>
 
-      <ion-button expand="block" 
-        (click)="signInWithGoogle()"
-        class="google-button"
-        color="light">
+      <ion-button expand="block" (click)="signInWithGoogle()" [disabled]="defaultLoginConfig?.enabled"
+        class="google-button" color="light">
         <ion-icon slot="start" src="assets/icon/google.svg"></ion-icon>
         Continue with Google
       </ion-button>
