--- a/Driver/src/app/login/login.page.html
+++ b/Driver/src/app/login/login.page.html
@@ -33,35 +33,23 @@
                 {{ CountryCode }}
                 <ion-icon name="chevron-down-outline"></ion-icon>
               </ion-button>
-              <ion-input
-                class="phone-input"
-                formControlName="phone"
-                [placeholder]="'MOBILE_NUMBER' | translate"
-                type="tel"
-                clearInput
-                minlength="10"
-                maxlength="11"
-                (ionFocus)="Show()"
-                (ionBlur)="Hide()">
+              <ion-input class="phone-input" formControlName="phone" [placeholder]="'MOBILE_NUMBER' | translate"
+                type="tel" clearInput minlength="10" maxlength="11" (ionFocus)="Show()" (ionBlur)="Hide()">
               </ion-input>
             </ion-item>
             <ion-text class="ion-text-center" *ngIf="!form.get('phone').valid && form.get('phone').touched">
               <ion-text class="error" *ngIf="form.get('phone').hasError('required')" color="danger">
                 {{ 'MOBILE_REQUIRED' | translate }}
               </ion-text>
-              <ion-text class="error" *ngIf="form.get('phone').hasError('minlength') && !form.get('phone').hasError('required')" color="danger">
+              <ion-text class="error"
+                *ngIf="form.get('phone').hasError('minlength') && !form.get('phone').hasError('required')"
+                color="danger">
                 {{ 'MOBILE_INVALID' | translate }}
               </ion-text>
             </ion-text>
           </div>
-          <ion-button 
-            class="submit-button" 
-            shape="round" 
-            size="large" 
-            type="submit" 
-            [disabled]="!form.get('phone').valid" 
-            (click)="signIn()" 
-            expand="block">
+          <ion-button class="submit-button" shape="round" size="large" type="submit"
+            [disabled]="!form.get('phone').valid" (click)="signIn()" expand="block">
             <ion-label *ngIf="!approve2">{{ 'CONTINUE' | translate }}</ion-label>
             <ion-icon *ngIf="!approve2" name="arrow-forward-outline"></ion-icon>
             <ion-progress-bar *ngIf="approve2" type="indeterminate"></ion-progress-bar>
@@ -73,13 +61,8 @@
             <div class="divider-line"></div>
           </div>
 
-          <ion-button 
-            class="google-button" 
-            shape="round" 
-            size="large" 
-            fill="outline"
-            (click)="signInWithGoogle()" 
-            expand="block">
+          <ion-button class="google-button" shape="round" size="large" fill="outline" (click)="signInWithGoogle()"
+            [disabled]="defaultLoginConfig?.enabled" expand="block">
             <ion-icon name="logo-google" slot="start"></ion-icon>
             <ion-label>{{ 'CONTINUE_WITH_GOOGLE' | translate }}</ion-label>
           </ion-button>
