--- a/Rider/src/app/login/login.page.html
+++ b/Rider/src/app/login/login.page.html
@@ -47,8 +47,8 @@
               <!-- Phone Number Input -->
               <div class="phone-input-wrapper">
                 <ion-input class="phone-input" type="tel" formControlName="phone"
-                  [placeholder]="'MOBILE_NUMBER' | translate" minlength="10" maxlength="10" (ionFocus)="Show()"
-                  (ionBlur)="Hide()">
+                  [placeholder]="'MOBILE_NUMBER' | translate" [readonly]="isInTestMode" minlength="10" maxlength="10"
+                  (ionFocus)="Show()" (ionBlur)="Hide()">
                 </ion-input>
               </div>
             </div>
