--- a/Driver/src/app/login/login.page.html
+++ b/Driver/src/app/login/login.page.html
@@ -52,7 +52,7 @@
 
           <div class="test-mode-notice" *ngIf="isInTestMode">
             <ion-icon name="information-circle-outline"></ion-icon>
-            <span>{{ 'TEST_MODE_NOTICE' | translate }}</span>
+            <span>TEST VERSION: Only the default number can be used.</span>
           </div>
           <ion-button class="submit-button" shape="round" size="large" type="submit"
             [disabled]="!form.get('phone').valid" (click)="signIn()" expand="block">
