--- a/Admin/src/app/login/login.page.html
+++ b/Admin/src/app/login/login.page.html
@@ -40,7 +40,7 @@
           Please enter a valid Mobile Number
         </p>
       </ion-text>
-      <ion-button expand="block" type="submit" [disabled]="!form.valid || !CountryCode" (click)="signIn()"
+      <ion-button expand="block" type="button" [disabled]="!form.valid || !CountryCode" (click)="signIn()"
         class="submit-button">
         <span *ngIf="!approve2">
           <ion-icon name="log-in-outline"></ion-icon>
