--- a/Admin/src/app/pages/details/details.page.html
+++ b/Admin/src/app/pages/details/details.page.html
@@ -14,7 +14,8 @@
 
     <ion-item>
       <ion-label position="floating">Your Email</ion-label>
-      <ion-input formControlName="email" type="email" minlength="1" maxlength="200"></ion-input>
+      <ion-input formControlName="email" type="email" [readonly]="user?.email" minlength="1"
+        maxlength="200"></ion-input>
     </ion-item>
 
     <ion-item *ngIf="isGoogleUser">
