--- a/Driver/src/app/pages/details/details.page.html
+++ b/Driver/src/app/pages/details/details.page.html
@@ -51,7 +51,8 @@
           </ion-item>
 
           <ion-item>
-            <ion-input formControlName="email" type="email" [placeholder]="'DETAILS.PERSONAL_INFO.EMAIL' | translate">
+            <ion-input formControlName="email" type="email" [readonly]="user?.email"
+              [placeholder]="'DETAILS.PERSONAL_INFO.EMAIL' | translate">
             </ion-input>
           </ion-item>
         </ion-item-group>
@@ -141,26 +142,26 @@
                 </div>
               </div> -->
 
-              <!-- Show submitted value for text documents -->
-              <!-- <div class="submitted-text" *ngIf="doc.type === 'text' && isDocumentSubmitted(doc.id)">
+        <!-- Show submitted value for text documents -->
+        <!-- <div class="submitted-text" *ngIf="doc.type === 'text' && isDocumentSubmitted(doc.id)">
                 <p>{{ getSubmittedValue(doc.id) }}</p>
               </div> -->
 
-              <!-- Show preview for image documents -->
-              <!-- <div class="submitted-image" *ngIf="doc.type === 'image' && isDocumentSubmitted(doc.id)">
+        <!-- Show preview for image documents -->
+        <!-- <div class="submitted-image" *ngIf="doc.type === 'image' && isDocumentSubmitted(doc.id)">
                 <img [src]="getSubmittedValue(doc.id)" alt="Submitted document" (click)="viewDocument(doc.id)">
               </div> -->
 
-              <!-- Show PDF indicator -->
-              <!-- <div class="submitted-pdf" *ngIf="doc.type === 'pdf' && isDocumentSubmitted(doc.id)">
+        <!-- Show PDF indicator -->
+        <!-- <div class="submitted-pdf" *ngIf="doc.type === 'pdf' && isDocumentSubmitted(doc.id)">
                 <ion-button fill="outline" size="small" (click)="viewDocument(doc.id)">
                   <ion-icon name="eye" slot="start"></ion-icon>
                   {{ 'DETAILS.DOCUMENTS.VIEW' | translate }} PDF
                 </ion-button>
               </div> -->
 
-              <!-- Upload/Edit button -->
-              <!-- <div class="document-actions">
+        <!-- Upload/Edit button -->
+        <!-- <div class="document-actions">
                 <ion-button 
                   [fill]="isDocumentSubmitted(doc.id) ? 'outline' : 'solid'"
                   size="small"
@@ -174,16 +175,16 @@
                 </ion-button>
               </div> -->
 
-              <!-- Instruction/Sample content -->
-              <!-- <div class="document-instruction" *ngIf="doc.content && !isDocumentSubmitted(doc.id)">
+        <!-- Instruction/Sample content -->
+        <!-- <div class="document-instruction" *ngIf="doc.content && !isDocumentSubmitted(doc.id)">
                 <ion-icon name="information-circle"></ion-icon>
                 <span>{{ doc.content }}</span>
               </div>
             </div>
           </div> -->
 
-          <!-- No documents message -->
-          <!-- <div class="no-documents" *ngIf="requiredDocuments.length === 0">
+        <!-- No documents message -->
+        <!-- <div class="no-documents" *ngIf="requiredDocuments.length === 0">
             <ion-icon name="documents"></ion-icon>
             <p>{{ 'DETAILS.DOCUMENTS.NO_DOCUMENTS' | translate }}</p>
           </div>
@@ -198,7 +199,7 @@
         {{ 'DETAILS.BUTTONS.SUBMIT' | translate }}
         <ion-spinner name="crescent" *ngIf="isSubmitting"></ion-spinner>
       </ion-button>
-      
+
       <!-- Missing requirements info -->
       <div class="missing-requirements" *ngIf="!isFormCompleteForSubmission()">
         <p class="missing-title">{{ 'DETAILS.DOCUMENTS.MISSING_REQUIREMENTS' | translate }}</p>
@@ -210,7 +211,8 @@
           <ion-icon name="close-circle" color="danger"></ion-icon>
           {{ 'DETAILS.DOCUMENTS.PROFILE_PHOTO_REQUIRED' | translate }}
         </p>
-        <p *ngIf="!form.get('driverLicenseImage')?.value || (!form.get('driverLicenseImage')?.value.startsWith('img_') && !form.get('driverLicenseImage')?.value.startsWith('assets/'))" class="missing-item">
+        <p *ngIf="!form.get('driverLicenseImage')?.value || (!form.get('driverLicenseImage')?.value.startsWith('img_') && !form.get('driverLicenseImage')?.value.startsWith('assets/'))"
+          class="missing-item">
           <ion-icon name="close-circle" color="danger"></ion-icon>
           {{ 'DETAILS.DOCUMENTS.LICENSE_PHOTO_REQUIRED' | translate }}
         </p>
